training: Updated Validator Fundamentals courses (#713)
* Setup for new validator training

* Save point

* Save point

* Save point

* Save point

* Save point

* Editing

* Validator Module 1 draft

* Setup for Module 2

* Save point module 2

* Save point module 2

* Save point module 2

* Module 2 draft

* Setting up for 3 & 4

* Module 3 WIP

* save

* Module 3 summary

* Module 4 save

* Save point

* Adding missing info from old training WIP

* Save for day

* Module 4 WIP

* Adjusting fonts for developer training

* Adjusting fonts for validator  training

* Template & tweaks

* Save point

* Module 4 done

* Modifying Makefile to copy both sets of notebooks

* Pulling in latest notebooks to copy over exe

* Updating URLS to executed Pt1

* Updating URLS to executed Pt2

* Pulling in latest notebooks with typo fixes

* Typo fix in anchor

* Upating exxecute Make command

* Wrapper

* Proofreading

* More proofreading

* More proofreading...

* Even more proofreading

* Adding analytics to Developer

* Adding overview to Developer

* Trying something?

* Adjust

* Retrieving the package locally instead

* Tweak

* Trying something

* Test

* Testing font resolve

* Latest widget pull

* hm

* Ugh

* Removing outdated widget embed

* Removing unneeded widget dir

* Modifying dev.env

* Oops, missed one adjustment

* Adding validation execution

* Adding cache to execution action

* Editing staging workflows

* Editing prod workflows

* Made filter more restrictive for notebooks

* Edited validator permissions

* Updated notebooks from beck/ownership-edit

* repo-actions: [issue]

* Removing unneeded line in Makefile

* Reverting repo-actions

* Removing references to old development notebook

* Forgot the JH variable

--- a/site/guide/model-validation/view-filter-model-findings.qmd
+++ b/site/guide/model-validation/view-filter-model-findings.qmd
@@ -20,43 +20,7 @@ Access a complete list of filterable findings logged across all your models in t
 
 You can review findings for all models at once, or only look at findings linked to a specific model.
 
-#### All model findings
-
-To view findings for all models: 
-
-1. In the left sidebar, click **{{< fa triangle-exclamation >}} Findings**.
-
-   In the page that opens is a list of all model findings, including information for:
-
-   - Title
-   - Severity
-   - Status
-   - Inventory model
-   - Risk area
-   - Assignee
-   - Due date
-   - Creation date
-   - Business unit
-
-   ![List of findings across all models](all-model-findings.png){fig-alt="A screenshot showing a list of findings across all models" .screenshot}
-
-::: {.callout}
-Filter this list to include only findings you want to see,[^4] or toggle visibilty for column headers.[^5]
-
-:::
-
-2. Click on any model finding for more information, including the proposed remediation plan and any supporting attachments.[^6]
-
-   Attachments are listed with the following information:
-
-   - Filename 
-   - Icon representing file type
-   - Date uploaded
-   - The user who uploaded the file
-   - File size
-   - Notes
-
-   Click on the attachment to view or download the file. 
+{{< include _view-all-findings.qmd >}}
 
 #### Model-specific findings
 
@@ -64,7 +28,7 @@ To view findings linked to a specific model:
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model or find your model by applying a filter or searching for it.[^7]
+2. Select a model or find your model by applying a filter or searching for it.[^4]
 
 3. In the left sidebar that appears for your model, click **{{< fa triangle-exclamation >}} Model Findings**.
 
@@ -79,19 +43,18 @@ To view findings linked to a specific model:
 
    ![List of findings specific to a model](model-specific-findings.png){fig-alt="A screenshot showing a list of findings specific to a model" .screenshot}
 
-4. Click on any model finding for more information, including the proposed remediation plan and any supporting attachments.[^8]
+4. Click on any model finding for more information, including the proposed remediation plan and any supporting attachments.[^5]
 
    Attachments are listed with the following information:
 
-   - Filename 
+   - Filename
    - Icon representing file type
    - Date uploaded
    - The user who uploaded the file
    - File size
    - Notes
 
-   Click on the attachment to view or download the file. 
-
+   Click on the attachment to view or download the file.
 
 ## Filter and sort model findings
 
@@ -141,7 +104,7 @@ Customize what is displayed on your list of all model findings:
 
    ![Manage Columns on all Findings](manage-finding-columns-demo.gif){width=40% fig-alt="An animation that shows how to manage columns on all model findings" .screenshot}
 
-Once customized, you can save a view for later application.[^9]
+Once customized, you can save a view for later application.[^6]
 
 ### Manage custom findings views
 
@@ -154,9 +117,9 @@ Saved views are unique to you and do not display for other users in your organiz
 
 You can save custom findings configuration as a view to reapply at any time:
 
-1. Customize a findings layout.[^10]
+1. Customize a findings layout.[^7]
 
-   You can also apply filters or sorting before saving your view to include them in the view.[^11]
+   You can also apply filters or sorting before saving your view to include them in the view.[^8]
 
 {{< include /guide/model-inventory/_save-layout-view.qmd >}}
 
@@ -179,18 +142,12 @@ Deletion of saved views is permanent.
 
 [^3]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^4]: [Filter and sort model findings](#filter-and-sort-model-findings)
+[^4]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^5]: [Customize model findings layout](#customize-model-findings-layout)
+[^5]: [Manage supporting documentation](add-manage-model-findings.qmd#manage-supporting-documentation)
 
-[^6]: [Manage supporting documentation](add-manage-model-findings.qmd#manage-supporting-documentation)
+[^6]: [Save new findings view](#save-new-findings-view)
 
-[^7]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^7]: [Customize model findings layout](#customize-model-findings-layout)
 
-[^8]: [Manage supporting documentation](add-manage-model-findings.qmd#manage-supporting-documentation)
-
-[^9]: [Save new findings view](#save-new-findings-view)
-
-[^10]: [Customize model findings layout](#customize-model-findings-layout)
-
-[^11]: [Filter and sort model findings](#filter-and-sort-model-findings)
+[^8]: [Filter and sort model findings](#filter-and-sort-model-findings)
