--- a/site/notebooks/tutorials/model_validation/2-start_validation_process.ipynb
+++ b/site/notebooks/tutorials/model_validation/2-start_validation_process.ipynb
@@ -15,7 +15,11 @@
     "- Ensuring that data used for training and testing the model is of appropriate data quality\n",
     "- Ensuring that the raw data has been preprocessed appropriately and that the resulting final datasets reflects this\n",
     "\n",
-    "**For a full list of out-of-the-box tests,** refer to our [Test descriptions](https://docs.validmind.ai/developer/model-testing/test-descriptions.html) or try the interactive [Test sandbox](https://docs.validmind.ai/developer/model-testing/test-sandbox.html)."
+    "**For a full list of out-of-the-box tests,** refer to our [Test descriptions](https://docs.validmind.ai/developer/model-testing/test-descriptions.html) or try the interactive [Test sandbox](https://docs.validmind.ai/developer/model-testing/test-sandbox.html).\n",
+    "\n",
+    "<div class=\"alert alert-block alert-info\" style=\"background-color: #B5B5B510; color: black; border: 1px solid #083E44; border-left-width: 5px; box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);border-radius: 5px;\"><span style=\"color: #083E44;\"><b>Learn by doing</b></span>\n",
+    "<br></br>\n",
+    "Our course tailor-made for validators new to ValidMind combines this series of notebooks with more a more in-depth introduction to the ValidMind Platform — <a href=\"https://docs.validmind.ai/training/validator-fundamentals/validator-fundamentals-register.html\" style=\"color: #DE257E;\"><b>Validator Fundamentals</b></a></div>"
    ]
   },
   {
@@ -36,7 +40,7 @@
     "  - [Remove highly correlated features](#toc4_4_)    \n",
     "- [Documenting test results](#toc5_)    \n",
     "  - [Configure and run comparison tests](#toc5_1_)    \n",
-    "  - [Log tests with a unique identifiers](#toc5_2_)    \n",
+    "  - [Log tests with unique identifiers](#toc5_2_)    \n",
     "  - [Add test results to reporting](#toc5_3_)    \n",
     "- [Split the preprocessed dataset](#toc6_)    \n",
     "  - [Initialize the split datasets](#toc6_1_)    \n",
@@ -650,7 +654,7 @@
    "source": [
     "<a id='toc5_2_'></a>\n",
     "\n",
-    "### Log tests with a unique identifiers\n",
+    "### Log tests with unique identifiers\n",
     "\n",
     "Next, we'll use the previously initialized `vm_balanced_raw_dataset` (that still has a highly correlated `Age` column) as input to run an individual test, then log the result to the ValidMind Platform.\n",
     "\n",
