--- a/site/training/developer-fundamentals/finalizing-model-documentation.qmd
+++ b/site/training/developer-fundamentals/finalizing-model-documentation.qmd
@@ -45,6 +45,7 @@ This final module is part of a four-part series:
 3. [Submit documentation for approval](#submit-documentation-for-approval)
 4. [Collaborate with others](#collaborate-with-others)
 5. [Track model activity](#track-model-activity)
+6. [View analytics](#view-analytics)
 
 :::
 
@@ -156,12 +157,12 @@ From the {{< var validmind.platform >}}:
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.absolute bottom=0 left=50 right=50 .w-95 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=0 left=50 right=50 .w-95 .f5 .tc .pl4 .overlay}
 **Review model documentation**
 
-::: {.f5}
+::: {.f6}
 1. From the **{{< fa cubes >}} Inventory**, select the name of your model you registered for this course to open up the model details page.
-2. On the left sidebar that appears for your model, click **Documentation**.
+2. On the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**.
 3. Click into any section of the documentation to review the test results logged via the {{< var validmind.developer >}}. <br>
   For example: **2.3 Correlations and Interactions** / **3.2 Model Evaluation**
 
@@ -208,11 +209,11 @@ You can also use the content editing toolbar to revise the description of test r
 
 For example:
 
-1. Locate the Data Preparation section and click on **2.3 Correlations and Interactions** to expand that section.
+1. Within your model documentation, locate the Data Preparation section and click on **2.3 Correlations and Interactions** to expand that section.
 
 2. Click on the text to edit the description for our individually inserted `HighPearsonCorrelation:balanced_raw_dataset` test:
 
-  ![Screenshot showing description added to the new content block](/notebooks/images/high-pearson-correlation-block.png){fig-alt="Screenshot showing description added to the new content block" .screenshot}
+  ![Editor for a test result description](/notebooks/images/high-pearson-correlation-block.png){fig-alt="Screenshot showing the editor for a test result description" .screenshot}
 
 :::
 
@@ -221,13 +222,11 @@ For example:
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.absolute bottom=0 left=50 right=50 .w-95 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=0 left=50 right=50 .w-95 .f5 .tc .pl4 .overlay}
 **Add & edit content blocks**
 
-::: {.f5}
-1. From the **{{< fa cubes >}} Inventory**, select the name of your model you registered for this course to open up the model details page.
-2. On the left sidebar that appears for your model, click **Documentation**.
-3. Click into any section of the documentation to add or edit a content block.
+::: {.f6}
+From your model's **{{< fa book-open >}} Documentation**, click into any section of the documentation to add and edit a content block.
 
 :::
 
@@ -279,10 +278,10 @@ To transition through the approval workflow, all required workflow steps must be
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.absolute bottom=0 left=50 right=50 .w-95 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=0 left=50 right=50 .w-95 .f5 .tc .pl4 .overlay}
 **Submit for approval**
 
-::: {.f5}
+::: {.f6}
 1. From the **{{< fa cubes >}} Inventory**, select the name of your model you registered for this course to open up the model details page.
 2. Locate the **[model status]{.smallcaps}** section.
 3. Open up the status transition panel, enter your **[notes]{.smallcaps}** and any other additional inventory fields, then click **Submit**.
@@ -326,13 +325,11 @@ Comment threads
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.absolute bottom=0 left=50 right=50 .w-95 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=0 left=50 right=50 .w-95 .f5 .tc .pl4 .overlay}
 **Comment on model documentation**
 
-::: {.f5}
-1. From the **{{< fa cubes >}} Inventory**, select the name of your model you registered for this course to open up the model details page.
-2. In the left sidebar that appears for your model, click **Documentation**.
-3. **In the content block you added earlier:** Post a comment, reply to it, and then resolve the thread.
+::: {.f6}
+**In the content block you added earlier** within your model's **{{< fa book-open >}} Documentation**: Post a comment, reply to it, and then resolve the thread.
 
 :::
 
@@ -369,14 +366,32 @@ Track changes & updates
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.absolute bottom=0 left=50 right=50 .w-95 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=0 left=50 right=50 .w-95 .f5 .tc .pl4 .overlay}
 **Review model activity**
 
-::: {.f5}
+::: {.f6}
 1. From the **{{< fa cubes >}} Inventory**, select the name of your model you registered for this course to open up the model details page.
-2. In the left sidebar that appears for your model, click **Model Activity**.
+2. In the left sidebar that appears for your model, click **{{< fa wifi >}} Model Activity**.
 3. Filter the following activity: **Comments** | **Status Updates** | **Model Updates** | **Test Results**
 
+:::
+
+When you're done, click [{{< fa chevron-right >}}]() to continue.
+
+::::
+
+# View analytics {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+
+## {background-iframe="https://app.prod.validmind.ai/analytics" background-interactive="true" data-preload="yes"}
+
+:::: {.absolute bottom=0 left=50 right=50 .w-95 .f5 .tc .pl4 .overlay}
+**Welcome to {{< fa square-poll-vertical >}} Analytics**
+
+::: {.f6}
+Here, you can find executive summaries, track information on models, findings, and more. For example:
+
+1. Click **Models** to review reports on models.
+3. Click into any widget to review the models reported by that widget.
 :::
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
@@ -408,10 +423,12 @@ In this final module, you learned how to:
 - [x] Submit your model documentation for approval
 - [x] Collaborate with other stakeholders on your model
 - [x] Track updates on your model
+- [x] Navigate the analytics dashboard
+
 :::
 ::::
 
-::: {.f2}
+::: {.f3}
 <br>
 There is more that {{< var vm.product >}} can do to help you create model documentation, from using your own template to code samples you can adapt for your own use case:
 :::
