--- a/site/training/developer-fundamentals/implementing-custom-tests.qmd
+++ b/site/training/developer-fundamentals/implementing-custom-tests.qmd
@@ -87,13 +87,13 @@ To continue, you need to have been [onboarded](developer-fundamentals-register.q
 :::: {.columns}
 ::: {.column width="60%"}
 ::: {.tc}
-[Using {{< var vm.product >}} for model development](using-validmind-for-model-development.html){.button target="_blank"}
+[Using {{< var vm.product >}} for Model Development](using-validmind-for-model-development.html){.button target="_blank"}
 :::
 
 :::
 ::: {.column width="40%"}
 ::: {.tc}
-[Learning to run tests](learning-to-run-tests.html){.button target="_blank"}
+[Learning to Run Tests](learning-to-run-tests.html){.button target="_blank"}
 :::
 
 :::
@@ -112,7 +112,7 @@ Already logged in and refreshed this module? Click [{{< fa chevron-right >}}]() 
 
 ::: {.w-50-ns .tc}
 
-[Log in to JupyterHub](https://jupyterhub.validmind.ai/){.button target="_blank"}
+[Log in to JupyterHub]({{< var url.jupyterhub >}}/){.button target="_blank"}
 
 :::
 
@@ -147,7 +147,7 @@ Be sure to return to this page afterwards.
 Jupyter Notebook series
 
 ::: {.f3}
-When you run these notebooks, they will generate a draft of model documentation and upload it to {{< var vm.product >}}, complete with test supporting test results.
+When you run these notebooks, they will generate a draft of model documentation and upload it to {{< var vm.product >}}, complete with supporting test results.
 
 ::: {.f5 .nt2 .pl2 .mb4}
 <br>
@@ -183,10 +183,10 @@ Let's continue our journey with **Section 1** on the next page. {{< fa hand-poin
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/3-integrate_custom_tests.html" background-interactive="yes" data-preload="yes"}
 
-:::: {.absolute bottom=15 left=0 right=50 .w-100 .f4 .tc .pl4 .pr4 .overlay}
+:::: {.absolute bottom=15 left=0 right=50 .w-100 .f5 .tc .pl4 .pr4 .overlay}
 **3 — Integrate custom tests**
 
-::: {.f5}
+::: {.f6}
 This is the third notebook in our introductory series, which will walk you through how to implement different types of custom tests with {{< var vm.product >}}.
 
 :::
@@ -243,13 +243,13 @@ Make sure you're logged in and have refreshed the page in a Chromium-based web b
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/3-integrate_custom_tests.html#initialize-the-validmind-library" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
 **Connect to your model**
 
-::: {.f5}
+::: {.f6}
 With your code snippet copied to your clipboard:
 
-1. Open **3 — Integrate custom tests**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/3-integrate_custom_tests.ipynb){target="_blank"}
+1. Open **3 — Integrate custom tests**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/3-integrate_custom_tests.ipynb){target="_blank"}
 2. Run all the cells under the **Setting up** section.
 
 :::
@@ -271,7 +271,7 @@ Custom inline tests
 :::
 
 ::: {.column width="70%" .bl .pl4 .f3}
-Let's implement a custom *inline test* that calculates the confusion matrix for a binary classification model.
+Let's implement a custom *inline test* that calculates the confusion matrix for a binary classification model:
 
 - An inline test refers to a test written and executed within the same environment as the code being tested — in the following example, right in our Jupyter Notebook —  without requiring a separate test file or framework.
 - You'll note that the custom test function is just a regular Python function that can include and require any Python library as you see fit.
@@ -281,13 +281,13 @@ Let's implement a custom *inline test* that calculates the confusion matrix for 
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/3-integrate_custom_tests.html#create-a-confusion-matrix-plot" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
 **Create a custom test**
 
-::: {.f5}
+::: {.f6}
 The [`@vm.test` wrapper](/validmind/validmind.qmd#test){target="_blank"} allows you to create a reusable test:
 
-1. Continue with **3 — Integrate custom tests**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/3-integrate_custom_tests.ipynb){target="_blank"}
+1. Continue with **3 — Integrate custom tests**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/3-integrate_custom_tests.ipynb){target="_blank"}
 2. Run all the cells in the following section under Implementing a custom inline test: **Create a confusion matrix plot**
 
 :::
@@ -298,14 +298,14 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/3-integrate_custom_tests.html#add-parameters-to-custom-tests" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
 **Adjust your custom test**
 
-::: {.f5}
+::: {.f6}
 Custom tests can take parameters just like any other function:
 
-1. Continue with **3 — Integrate custom tests**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/3-integrate_custom_tests.ipynb){target="_blank"}
-2. Run all the cells in the following sections under Implementing a custom inline test: <br>**Add parameters to custom tests** / **Pass parameters to custom tests**
+1. Continue with **3 — Integrate custom tests**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/3-integrate_custom_tests.ipynb){target="_blank"}
+2. Run all the cells in the following sections under Implementing a custom inline test: **Add parameters to custom tests** / **Pass parameters to custom tests**
 
 :::
 
@@ -315,13 +315,13 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/3-integrate_custom_tests.html#log-the-confusion-matrix-results" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
 **Log your custom test**
 
-::: {.f5}
+::: {.f6}
 Use the [`.log()` method](/validmind/validmind/vm_models.qmd#log){target="_blank"} to send the results of your custom test to the {{< var validmind.platform >}}:
 
-1. Continue with **3 — Integrate custom tests**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/3-integrate_custom_tests.ipynb){target="_blank"}
+1. Continue with **3 — Integrate custom tests**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/3-integrate_custom_tests.ipynb){target="_blank"}
 2. Run the cell in the following section under Implementing a custom inline test: **Log the confusion matrix results**
 
 :::
@@ -356,13 +356,13 @@ Creating inline custom tests with a function is a great way to customize your mo
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/3-integrate_custom_tests.html#create-custom-tests-folder" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
 **Create custom tests folder**
 
-::: {.f5}
+::: {.f6}
 Create a new folder that will contain reusable custom tests from your existing inline tests:
 
-1. Continue with **3 — Integrate custom tests**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/3-integrate_custom_tests.ipynb){target="_blank"}
+1. Continue with **3 — Integrate custom tests**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/3-integrate_custom_tests.ipynb){target="_blank"}
 2. Run the cell under the following Using external test providers section: **Create custom tests folder**
 
 :::
@@ -373,13 +373,13 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/3-integrate_custom_tests.html#save-an-inline-test" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
 **Save inline test**
 
-::: {.f5}
+::: {.f6}
 The `@vm.test` decorator also includes a convenience method that allows you to save the test to a Python file at a specified path:
 
-1. Continue with **3 — Integrate custom tests**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/3-integrate_custom_tests.ipynb){target="_blank"}
+1. Continue with **3 — Integrate custom tests**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/3-integrate_custom_tests.ipynb){target="_blank"}
 2. Run all the cells under the Using external test providers section: **Save an inline test**
 
 :::
@@ -390,13 +390,13 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/3-integrate_custom_tests.html#register-a-local-test-provider" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
 **Register local test provider**
 
-::: {.f5}
+::: {.f6}
 Next, let's initialize a test provider that will tell the {{< var validmind.developer >}} where to find your saved custom tests:
 
-1. Continue with **3 — Integrate custom tests**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/3-integrate_custom_tests.ipynb){target="_blank"}
+1. Continue with **3 — Integrate custom tests**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/3-integrate_custom_tests.ipynb){target="_blank"}
 2. Run all the cells under the Using external test providers section: **Register a local test provider**
 
 :::
@@ -435,14 +435,14 @@ With the custom test results logged, let's head to the model we connected to at 
 
 3. Locate the Data Preparation section and click on **3.2 Model Evaluation** to expand that section.
 
-4. Hover under the Pearson Correlation Matrix content block until a horizontal dashed line with a **+** button appears, indicating that you can insert a new block.
+4. Hover under the Pearson Correlation Matrix content block until a horizontal dashed line with a **{{< fa plus >}}** button appears, indicating that you can insert a new block.
 
-5. Click **+** and then select **Test-Driven Block** under [from library]{.smallcaps}:
+5. Click **{{< fa plus >}}** and then select **Test-Driven Block** under [from library]{.smallcaps}:
 
     - Click on **Custom** under [test-driven]{.smallcaps} in the left sidebar.
     - Select the two custom `ConfusionMatrix` tests you logged above:
 
-    ![The ConfusionMatrix tests selected](/notebooks/EXECUTED/model_development/selecting-confusion-matrix-test.png){fig-alt="Screenshot showing the ConfusionMatrix tests selected" .screenshot}
+    ![The ConfusionMatrix tests selected](/notebooks/tutorials/model_development/selecting-confusion-matrix-test.png){fig-alt="Screenshot showing the ConfusionMatrix tests selected" .screenshot}
 
 6. Finally, click **Insert 2 Test Results to Document** to add the test results to the documentation.
 
@@ -472,10 +472,10 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/4-finalize_testing_documentation.html" background-interactive="yes" data-preload="yes"}
 
-:::: {.absolute bottom=15 left=0 right=50 .w-100 .f4 .tc .pl4 .pr4 .overlay}
+:::: {.absolute bottom=15 left=0 right=50 .w-100 .f5 .tc .pl4 .pr4 .overlay}
 **4 — Finalize testing and documentation**
 
-::: {.f5}
+::: {.f6}
 This is the final notebook in our introductory series, which will walk you through wrapping custom test results into your documentation, as well as how to update the configuration for the entire model documentation template to suit your needs.
 :::
 
@@ -524,13 +524,13 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/4-finalize_testing_documentation.html#initialize-the-validmind-library" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
 **Connect to your model**
 
-::: {.f5}
+::: {.f6}
 With your code snippet copied to your clipboard:
 
-1. Open **4 — Finalize testing and documentation**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/4-finalize_testing_documentation.ipynb){target="_blank"}
+1. Open **4 — Finalize testing and documentation**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/4-finalize_testing_documentation.ipynb){target="_blank"}
 2. Run all the cells under the **Setting up** section.
 
 :::
@@ -543,13 +543,13 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/4-finalize_testing_documentation.html#reconnect-to-validmind" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
 **Reconnect to {{< var vm.product >}}**
 
-::: {.f5}
+::: {.f6}
 After you insert test-driven blocks, changes should persist and become available every time you call the [`preview_template()` function](/validmind/validmind.qmd#preview_template){target="_blank"}:
 
-1. Continue with **4 — Finalize testing and documentation**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/4-finalize_testing_documentation.ipynb){target="_blank"}
+1. Continue with **4 — Finalize testing and documentation**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/4-finalize_testing_documentation.ipynb){target="_blank"}
 2. Run all the cells under the **Reconnect to {{< var vm.product >}}** section.
 
 :::
@@ -560,13 +560,13 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/4-finalize_testing_documentation.html#include-custom-test-results" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
 **Log custom test results**
 
-::: {.f5}
+::: {.f6}
 Now that your custom test IDs are part of your template, you can now run tests for an entire section and all additional custom tests will be loaded:
 
-1. Continue with **4 — Finalize testing and documentation**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/4-finalize_testing_documentation.ipynb){target="_blank"}
+1. Continue with **4 — Finalize testing and documentation**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/4-finalize_testing_documentation.ipynb){target="_blank"}
 2. Run the cell under the **Include custom test results** section.
 
 :::
@@ -606,11 +606,11 @@ The utility function `vm.get_test_suite().get_default_config()` will return the 
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/4-finalize_testing_documentation.html#documentation-template-configuration" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
 **Retrieve default configuration**
 
-::: {.f5}
-1. Continue with **4 — Finalize testing and documentation**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/4-finalize_testing_documentation.ipynb){target="_blank"}
+::: {.f6}
+1. Continue with **4 — Finalize testing and documentation**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/4-finalize_testing_documentation.ipynb){target="_blank"}
 2. Run the first cell under the **Documentation template configuration** section.
 
 :::
@@ -621,13 +621,13 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/4-finalize_testing_documentation.html#update-the-config" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
 **Update template configuration**
 
-::: {.f5}
+::: {.f6}
 The default configuration does not assign any inputs to a test, but you can assign inputs to individual tests as needed:
 
-1. Continue with **4 — Finalize testing and documentation**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/4-finalize_testing_documentation.ipynb){target="_blank"}
+1. Continue with **4 — Finalize testing and documentation**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/4-finalize_testing_documentation.ipynb){target="_blank"}
 2. Run the all the cells under the following Documentation template configuration section: **Update the config**
 
 :::
@@ -663,5 +663,5 @@ In this third module, you learned how to:
 Continue your model development journey with:
 <br><br>
 <!-- IMPORTANT: USE THE .HTML PATH AND NOT THE .QMD PATH FOR THE REVEALJS OUTPUT -->
-[Finalizing model documentation](finalizing-model-documentation.html){.button target="_blank"}
+[Finalizing Model Documentation](finalizing-model-documentation.html){.button target="_blank"}
 :::
