--- a/site/training/developer-fundamentals/learning-to-run-tests.qmd
+++ b/site/training/developer-fundamentals/learning-to-run-tests.qmd
@@ -63,7 +63,7 @@ To continue, you need to have been [onboarded](developer-fundamentals-register.q
 
 ::: {.tc}
 <!-- IMPORTANT: USE THE .HTML PATH AND NOT THE .QMD PATH FOR THE REVEALJS OUTPUT -->
-[Using {{< var vm.product >}} for model development](using-validmind-for-model-development.html){.button target="_blank"}
+[Using {{< var vm.product >}} for Model Development](using-validmind-for-model-development.html){.button target="_blank"}
 :::
 
 :::: {.tc .mt5 .f2 .embed}
@@ -79,7 +79,7 @@ Already logged in and refreshed this module? Click [{{< fa chevron-right >}}]() 
 
 ::: {.w-50-ns .tc}
 
-[Log in to JupyterHub](https://jupyterhub.validmind.ai/){.button target="_blank"}
+[Log in to JupyterHub]({{< var url.jupyterhub >}}/){.button target="_blank"}
 
 :::
 
@@ -116,7 +116,7 @@ Be sure to return to this page afterwards.
 Jupyter Notebook series
 
 ::: {.f3}
-When you run these notebooks, they will generate a draft of model documentation and upload it to {{< var vm.product >}}, complete with test supporting test results.
+When you run these notebooks, they will generate a draft of model documentation and upload it to {{< var vm.product >}}, complete with supporting test results.
 
 ::: {.f5 .nt2 .pl2 .mb4}
 <br>
@@ -148,10 +148,10 @@ Let's continue our journey with **2 — Start the model development process** on
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html" background-interactive="yes" data-preload="yes"}
 
-:::: {.absolute bottom=15 left=0 right=50 .w-100 .f4 .tc .pl4 .pr4 .overlay}
+:::: {.absolute bottom=15 left=0 right=50 .w-100 .f5 .tc .pl4 .pr4 .overlay}
 **2 — Start the model development process**
 
-::: {.f5}
+::: {.f6}
 During this course, we'll run through these notebooks together, and at the end of your learning journey you'll have a fully documented sample model ready for review.
 
 :::
@@ -160,7 +160,6 @@ For now, **scroll through this notebook** to explore. When you are done, click [
 
 ::::
 
-
 <!-- USING THE VARIABLE IN THE HEADING MESSES UP THE PAGE ANCHOR -->
 
 # Explore ValidMind tests {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
@@ -168,10 +167,10 @@ For now, **scroll through this notebook** to explore. When you are done, click [
 ## {background-iframe="/developer/model-testing/test-descriptions.html" background-interactive="true" data-preload="yes"}
 
 ::: footer
-:::: {.absolute bottom=0 left=50 right=50 .w-95 .f3 .tc .pl4 .overlay}
+:::: {.absolute bottom=0 left=50 right=50 .w-95 .f4 .tc .pl4 .overlay}
 **{{< var vm.product >}} test repository**
 
-::: {.f4}
+::: {.f5}
 {{< var vm.product >}} provides a wealth out-of-the-box of tests to help you ensure that your model is being built appropriately.
 
 In this module, you'll become familiar with the individual tests available in {{< var vm.product >}}, as well as how to run them and change parameters as necessary.
@@ -231,14 +230,14 @@ Make sure you're logged in and have refreshed the page in a Chromium-based web b
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html#initialize-the-validmind-library" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
 **Connect to your model**
 
-::: {.f5}
+::: {.f6}
 With your code snippet copied to your clipboard:
 
-1. Open **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
-2. Run the following cells in the Setting up section: <br>**Initialize the {{< var validmind.developer >}}** / **Import sample dataset**.
+1. Open **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
+2. Run the following cells in the Setting up section: **Initialize the {{< var validmind.developer >}}** / **Import sample dataset**.
 
 :::
 
@@ -246,16 +245,15 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ::::
 
-
 ## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html#identify-qualitative-tests" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
 **Identify qualitative tests**
 
-::: {.f5}
+::: {.f6}
 Next, we'll use the [`list_tests()` function](/notebooks/EXECUTED/model_development/1-set_up_validmind.ipynb#explore-available-tests){target="_blank"} to pinpoint tests we want to run:
 
-1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
+1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
 2. Run all the cells under the Setting up section: **Identify qualitative tests**
 
 :::
@@ -263,16 +261,15 @@ Next, we'll use the [`list_tests()` function](/notebooks/EXECUTED/model_developm
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 ::::
 
-
 ## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html#initialize-the-validmind-datasets" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
 **Initialize {{< var vm.product >}} datasets**
 
-::: {.f5}
+::: {.f6}
 Then, we'll use the [`init_dataset()` function](/validmind/validmind.qmd#init_dataset){target="_blank"} to connect the sample data with a {{< var vm.product >}} `Dataset` object in preparation for running tests:
 
-1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
+1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
 2. Run the following cell in the Setting up section: **Initialize the {{< var vm.product >}} datasets**
 
 :::
@@ -281,20 +278,19 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ::::
 
-
 <!-- USING THE VARIABLE IN THE HEADING MESSES UP THE PAGE ANCHOR -->
 
 # Run ValidMind tests {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html#run-tabular-data-tests" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
 **Run tabular data tests**
 
-::: {.f5}
-You run individual tests by calling the [`run_test` function](/validmind/validmind/tests.qmd#run_test){target="_blank"} provided by the `validmind.tests` module:
+::: {.f6}
+You run individual tests by calling the [`run_test()` function](/validmind/validmind/tests.qmd#run_test){target="_blank"} provided by the `validmind.tests` module:
 
-1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
+1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
 2. Run all the cells under the Running tests section: **Run tabular data tests**.
 
 :::
@@ -305,13 +301,13 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html#utilize-test-output" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
 **Utilize test output**
 
-::: {.f5}
+::: {.f6}
 You can utilize the output from a ValidMind test for further use, for example, if you want to remove highly correlated features:
 
-1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
+1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
 2. Run all the cells under the Running tests section: **Utilize test output**.
 
 :::
@@ -319,7 +315,6 @@ You can utilize the output from a ValidMind test for further use, for example, i
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
 ::::
-
 
 <!-- USING THE VARIABLE IN THE HEADING MESSES UP THE PAGE ANCHOR -->
 
@@ -350,13 +345,13 @@ Every test result returned by the `run_test()` function has a `.log()` method th
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html#run-and-log-multiple-tests" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
 **Run & log multiple tests**
 
-::: {.f5}
+::: {.f6}
 The [`run_documentation_tests()` function](/validmind/validmind.qmd#run_documentation_tests){target="_blank"} allows you to run multiple tests at once and automatically log the results to your documentation:
 
-1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
+1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
 2. Run the following cell in the Documenting results section: **Run and log multiple tests**.
 :::
 
@@ -366,13 +361,13 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html#run-and-log-an-individual-test" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
 **Run & log an individual test**
 
-::: {.f5}
+::: {.f6}
 Next, we'll run an individual test and log the result to the {{< var validmind.platform >}}:
 
-1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
+1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
 2. Run the following cell in the Running tests section: **Run and log an individual test**.
 
 :::
@@ -402,13 +397,13 @@ With the test results logged, let's head to the model we connected to at the beg
 
 1. From the **{{< fa cubes >}} Inventory** in the {{< var validmind.platform >}}, go to the model you connected to earlier.
 
-2. In the left sidebar that appears for your model, click **Documentation**.
+2. In the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**.
 
 3. Locate the Data Preparation section and click on **2.3 Correlations and Interactions** to expand that section.
 
-4. Hover under the Pearson Correlation Matrix content block until a horizontal dashed line with a **+** button appears, indicating that you can insert a new block.
+4. Hover under the Pearson Correlation Matrix content block until a horizontal dashed line with a **{{< fa plus >}}** button appears, indicating that you can insert a new block.
 
-5. Click **+** and then select **Test-Driven Block** under [from library]{.smallcaps}:
+5. Click **{{< fa plus >}}** and then select **Test-Driven Block** under [from library]{.smallcaps}:
 
     - Click on **VM Library** under [test-driven]{.smallcaps} in the left sidebar.
     - In the search bar, type in `HighPearsonCorrelation`.
@@ -428,7 +423,7 @@ With the test results logged, let's head to the model we connected to at the beg
 **Insert a test-driven block**
 
 ::: {.f6}
-2.3 Correlations and Interactions — `HighPearsonCorrelation:balanced_raw_dataset`
+Within your model's **{{< fa book-open >}} Documentation**: 2.3 Correlations and Interactions — `HighPearsonCorrelation:balanced_raw_dataset`
 
 :::
 
@@ -480,13 +475,13 @@ In this next example, we’ll focus on running the tests within the Model Develo
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html#train-simple-logistic-regression-model" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
 **Train your model**
 
-::: {.f5}
+::: {.f6}
 Using {{< var vm.product >}} tests, we'll train a simple logistic regression model on our dataset and evaluate its performance:
 
-1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
+1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
 2. Run all the cells under the Model testing section: **Train simple logistic regression model**.
 :::
 
@@ -496,13 +491,13 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html#initialize-model-evaluation-objects" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
 **Initialize a model object**
 
-::: {.f5}
-Use the `init_dataset` and [`init_model` functions](/validmind/validmind.qmd#init_model){target="_blank"} to initialize these objects:
+::: {.f6}
+Use the `init_dataset()` and [`init_model()` functions](/validmind/validmind.qmd#init_model){target="_blank"} to initialize these objects:
 
-1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
+1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
 2. Run the cell under the following Model testing section: **Initialize model evaluation objects**.
 
 :::
@@ -513,13 +508,13 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html#assign-predictions" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
 **Assign predictions**
 
-::: {.f5}
+::: {.f6}
 Use the [`assign_predictions()` method](/validmind/validmind/vm_models.qmd#assign_predictions){target="_blank"} from the `Dataset` object to link existing predictions to any number of models:
 
-1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
+1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
 2. Run the cell under the following Model testing section: **Assign predictions**.
 
 :::
@@ -530,13 +525,13 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html#run-the-model-evaluation-tests" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
 **Run the model evaluation tests**
 
-::: {.f5}
+::: {.f6}
 Finally, we'll run only the tests within the Model Development section of the model documentation:
 
-1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
+1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
 2. Run the cell under the following Model testing section: **Run the model evaluation tests**.
 
 :::
@@ -574,5 +569,5 @@ In this second module, you learned how to:
 Continue your model development journey with:
 <br><br>
 <!-- IMPORTANT: USE THE .HTML PATH AND NOT THE .QMD PATH FOR THE REVEALJS OUTPUT -->
-[Implementing custom tests](implementing-custom-tests.html){.button target="_blank"}
+[Implementing Custom Tests](implementing-custom-tests.html){.button target="_blank"}
 :::
