--- a/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
+++ b/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
@@ -76,7 +76,7 @@ Already logged in and refreshed this module? Click [{{< fa chevron-right >}}]() 
 
 ::: {.w-50-ns .tc}
 
-[Log in to JupyterHub](https://jupyterhub.validmind.ai/){.button target="_blank"}
+[Log in to JupyterHub]({{< var url.jupyterhub >}}/){.button target="_blank"}
 
 :::
 
@@ -113,7 +113,7 @@ Be sure to return to this page afterwards.
 Jupyter Notebook series
 
 ::: {.f3}
-When you run these notebooks, they will generate a draft of model documentation and upload it to {{< var vm.product >}}, complete with test supporting test results.
+When you run these notebooks, they will generate a draft of model documentation and upload it to {{< var vm.product >}}, complete with supporting test results.
 
 :::
 :::
@@ -142,10 +142,10 @@ Let's start our journey with **1 — Set up the {{< var validmind.developer >}}*
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/1-set_up_validmind.html" background-interactive="yes" data-preload="yes"} 
 
-:::: {.absolute bottom=15 left=0 right=50 .w-100 .f4 .tc .pl4 .pr4 .overlay}
+:::: {.absolute bottom=15 left=0 right=50 .w-100 .f5 .tc .pl4 .pr4 .overlay}
 **1 — Set up the {{< var validmind.developer >}}**
 
-::: {.f5}
+::: {.f6}
 During this course, we'll run through these notebooks together, and at the end of your learning journey you'll have a fully documented sample model ready for review.
 :::
 
@@ -159,7 +159,7 @@ For now, **scroll through this notebook** to explore. When you are done, click [
 
 ## {background-iframe="https://app.prod.validmind.ai" background-interactive="true" data-preload="yes"}
 
-::: {.fr .f4 .nr5 .pa5 .overlay}
+::: {.fr .f5 .mv4 .nr5 .pa5 .overlay}
 **Welcome to the {{< var validmind.platform >}}**
 
 From here, you can:
@@ -169,7 +169,7 @@ From here, you can:
 - Collaborate with model validators <br>to get your model approved ...
 - ... and much more!
 
-::: {.f5 .pl3 .pr3 .embed}
+::: {.f6 .pl3 .pr3 .embed}
 **Can't load the {{< var validmind.platform >}}?**
 
 Make sure you're logged in and have <br>refreshed the page in a Chromium-based <br>web browser.
@@ -183,22 +183,22 @@ When you're done navigating around,
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.fr .f4 .mv5 .nr5 .pa4 .overlay}
-**Welcome to the model inventory**
+:::: {.fr .f5 .mv6 .nr5 .pa4 .overlay}
+**Welcome to the {{< fa cubes >}} Inventory**
 
 Use the model inventory to track <br>
 comprehensive details for all your <br>
-models throughout the model lifecycle. 
+models throughout the model lifecycle.
 
 The model inventory is customizable <br>
 and extensible, with a layout that <br>
 can be configured to suit your needs.
 
-::: {.f5 .pl3 .pr3 .embed}
+::: {.f6 .pl3 .pr3 .embed}
 To start the documentation process, <br>
 a model must already be registered <br>
 in the model inventory via the <br>
-**+ Register Model** modal.
+**{{< fa plus >}} Register Model** modal.
 :::
 
 **Let's register a model together** on <br>
@@ -208,27 +208,26 @@ the next page. {{< fa hand-point-right >}}
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory/?register=open" background-interactive="true" data-preload="yes"}
 
-:::: {.fr .f4 .mv5 .nr5 .pa4 .overlay}
+:::: {.fr .f5 .mv5 .nr5 .pa4 .overlay}
 **Register a binary <br>classification model**
 
 1. Select the option <br>
 for a new model:
 
-::: {.f5 .nt2 .pl2}
+::: {.f6 .nt2 .pl2}
 - **Documentation template** — <br>`Binary classification`
 - **Use case** — <br>`Attrition/Churn Management`
 
   You can fill in other options<br> according to your preference.
 :::
 
-2. Click **Register Model** to <br>
+2. Click **{{< fa plus >}} Register Model** to <br>
 add the model to your <br>
 inventory.
 
 When you're done, <br>click [{{< fa chevron-right >}}]() to continue.
 
 ::::
-
 
 <!-- USING THE VARIABLE IN THE HEADING MESSES UP THE PAGE ANCHOR -->
 
@@ -282,13 +281,13 @@ Make sure you're logged in and have refreshed the page in a Chromium-based web b
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/1-set_up_validmind.html#install-the-validmind-library" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
 **Install & initialize the {{< var validmind.developer >}}**
 
-::: {.f5}
+::: {.f6}
 With your code snippet copied to your clipboard:
 
-1. Open **1 — Set up the {{< var validmind.developer >}}**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/1-set_up_validmind.ipynb){target="_blank"}
+1. Open **1 — Set up the {{< var validmind.developer >}}**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/1-set_up_validmind.ipynb){target="_blank"}
 2. Run all the cells in the sections under **Initializing the {{< var validmind.developer >}}**.
 
 :::
@@ -297,20 +296,19 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ::::
 
-
 <!-- USING THE VARIABLE IN THE HEADING MESSES UP THE PAGE ANCHOR -->
 
 # Preview model documentation {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/1-set_up_validmind.html#preview-the-documentation-template" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
 **Preview the documentation template**
 
-::: {.f5}
+::: {.f6}
 You can preview your model's documentation template right from the {{< var validmind.developer >}}:
 
-1. Continue with **1 — Set up the {{< var validmind.developer >}}**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/1-set_up_validmind.ipynb){target="_blank"}
+1. Continue with **1 — Set up the {{< var validmind.developer >}}**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_development/1-set_up_validmind.ipynb){target="_blank"}
 2.  Run all the cells in the sections under **Getting to know ValidMind**.
 
 :::
@@ -319,17 +317,42 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ::::
 
+## {.scrollable .center}
+
+:::: {.columns}
+::: {.column width="30%" .pr4 .f2}
+**Document Overview**
+
+::: {.tc}
+[Learn more...](/guide/model-validation/review-model-documentation.qmd){.button target="_blank"}
+:::
+<br>
+
+Try it **live** on the next page. {{< fa hand-point-right >}}
+
+:::
+
+::: {.column width="70%" .bl .pl4 .f3}
+
+{{< include /guide/model-documentation/_model-documentation-overview.qmd >}}
+
+{{< include /guide/model-documentation/_review-model-documentation.qmd >}}
+
+
+:::
+::::
+
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.absolute bottom=0 left=50 right=50 .w-95 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=0 left=50 right=50 .w-95 .f5 .tc .pl4 .overlay}
 **Verify the documentation template**
 
-::: {.f5}
+::: {.f6}
 Once you've called `preview_template()`:
 
 1. From the model inventory, select the name of your model to open up the model details page.
-2. On the left sidebar that appears for your model, click **Documentation**.
-3. Note how the structure of the model documentation reflects the previewed template.
+2. On the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**.
+3. Note how the structure of the Document Overview reflects the previewed template.
 
 :::
 
@@ -363,5 +386,5 @@ In this first module, you learned how to:
 Continue your model development journey with:
 <br><br>
 <!-- IMPORTANT: USE THE .HTML PATH AND NOT THE .QMD PATH FOR THE REVEALJS OUTPUT -->
-[Learning to run tests](learning-to-run-tests.html){.button target="_blank"}
+[Learning to Run Tests](learning-to-run-tests.html){.button target="_blank"}
 :::
