--- a/site/training/training-templates/course-slides.qmd
+++ b/site/training/training-templates/course-slides.qmd
@@ -107,7 +107,7 @@ Already logged in and refreshed this module? Click [{{< fa chevron-right >}}]() 
 
 ::: {.w-50-ns .tc}
 
-[Log in to JupyterHub](https://jupyterhub.validmind.ai/){.button target="_blank"}
+[Log in to JupyterHub]({{< var url.jupyterhub >}}/){.button target="_blank"}
 
 :::
 
@@ -138,14 +138,14 @@ Be sure to return to this page afterwards.
 
 ## {background-iframe="https://app.prod.validmind.ai/" data-preload="yes"} 
 
-:::: {.fr .f3 .mv5 .nr4 .pa5 .overlay}
+:::: {.fr .f5 .mv5 .nr4 .pa5 .overlay}
 This is a right-aligned modal `.overlay` <br>on top of the live {{< var vm.product >}} Platform.  
 
 - It mimics the style of the docs site callouts.
 - **Bold text shows up in a different colour.**
 - You can use an additional callout style <br>with this class: `.embed`
 
-::: {.f4 .pl3 .pr3 .embed}
+::: {.f6 .pl3 .pr3 .embed}
 **This is the nested embed**, <br>which also has its own bold styling.
 :::
 
@@ -155,12 +155,12 @@ As you can see, you need to get creative <br>with some of your `<br>`s to determ
 
 # iFrame embed bottom {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
-## {background-iframe="/notebooks/tutorials/intro_for_model_developers_EXECUTED.html" background-interactive="yes" data-preload="yes"} 
+## {background-iframe="/notebooks/EXECUTED/model_development/1-set_up_validmind.html" background-interactive="yes" data-preload="yes"} 
 
-:::: {.absolute bottom=15 left=0 right=50 .w-100 .f3 .tc .pl4 .pr4 .overlay}
+:::: {.absolute bottom=15 left=0 right=50 .w-100 .f5 .tc .pl4 .pr4 .overlay}
 **This is a bottom-aligned modal `.overlay` on top of a rendered site file.**
 
-::: {.f4}
+::: {.f6}
 You can fully interact with the page contents. 
 :::
 ::::
@@ -204,7 +204,7 @@ This is a simple two-column user guide for one set of instructions.
 <br>Try it **live** on the next page. {{< fa hand-point-right >}}
 :::
 
-::: {.column width="70%" .bl .pl4 .f3}
+::: {.column width="70%" .bl .pl4 .f4}
 ### Single `h3` header
 
 Here you would embed some single-source instructions using Quarto's includes functionality, if they were available. 
