--- a/site/training/validator-fundamentals/validator-fundamentals-register.qmd
+++ b/site/training/validator-fundamentals/validator-fundamentals-register.qmd
@@ -2,8 +2,42 @@
 title: "Validator Fundamentals"
 subtitle: For {{< var vm.product >}}
 date: last-modified
-aliases: 
+aliases:
   - training-for-model-validators.html
+listing:
+  - id: validator-modules
+    type: grid
+    grid-columns: 2
+    max-description-length: 500
+    sort: false
+    table-hover: true
+    image-align: left
+    contents:
+    - path: using-validmind-for-model-validation.html
+      title: "Using {{< var vm.product >}} for Model Validation"
+      subtitle: "Module 1"
+      description: "{{< fa check >}} Install the {{< var validmind.developer >}} in your environment <br> {{< fa check >}} Connect to a champion model as a validator <br> {{< fa check >}} Preview the model's validation report template <br> {{< fa check >}} Review submitted model documentation"
+      reading-time: "20"
+      author: "{{< var vm.product >}}"
+    - path: running-data-quality-tests.html
+      title: "Running Data Quality Tests"
+      subtitle: "Module 2"
+      description: "{{< fa check >}} Identify relevant tests to run from {{< var vm.product >}}'s test vault <br> {{< fa check >}} Initialize datasets for use with the {{< var validmind.developer >}} <br> {{< fa check >}} Run and log out-of-the-box tests on your datasets <br> {{< fa check >}} Insert test results into your model’s validation report"
+      reading-time: "45"
+      author: "{{< var vm.product >}}"
+    - path: developing-challenger-models.html
+      title: "Developing Challenger Models"
+      subtitle: "Module 3"
+      description: "{{< fa check >}} Initialize models for use with the {{< var validmind.developer >}} <br> {{< fa check >}} Run and log out-of-the box and custom tests for your models <br> {{< fa check >}} Use the results of tests to log model findings"
+      reading-time: "60"
+      author: "{{< var vm.product >}}"
+    - path: finalizing-validation-reports.html
+      title: "Finalizing Validation Reports"
+      subtitle: "Module 4"
+      description: "{{< fa check >}} Make qualitative edits to your validation report <br> {{< fa check >}} Submit your validation report for approval <br> {{< fa check >}} Track finding resolution and other updates to your model"
+      reading-time: "25"
+      author: "{{< var vm.product >}}"
+    fields: [title, subtitle, description, reading-time]
 ---
 
 Learn how to use {{< var vm.product >}} as a **validator** to generate validation reports, automate testing, and collaborate with your model development team.
@@ -20,35 +54,22 @@ Learn how to use {{< var vm.product >}} as a **validator** to generate validatio
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-50-ns .pr3}
-### Learn how to
+#### Total duration
 
-#### Part 1
+150 minutes
 
-- Review model documentation
-- Analyze test results
-- Add findings, assess compliance and link evidence
-- Prepare validation reports
-
-#### Part 2
-
-- Track issue resolution
-- Submit for review and approval
-
-#### Duration 
-
-60 minutes
-
-[register](#register){.button-green .cta}
 :::
 
-::: {.w-50-ns .pa4}
+::: {.w-50-ns .pa3 .tr}
 
-::: {.preview source="validator-fundamentals.qmd"}
-:::
+[register now](#register){.button-green .cta}
 
 :::
 
 ::::
+
+:::{#validator-modules}
+:::
 
 :::
 
