--- a/site/notebooks/tutorials/model_development/2-start_development_process.ipynb
+++ b/site/notebooks/tutorials/model_development/2-start_development_process.ipynb
@@ -10,7 +10,11 @@
     "\n",
     "You'll become familiar with the individual tests available in ValidMind, as well as how to run them and change parameters as necessary. Using ValidMind's repository of individual tests as building blocks helps you ensure that a model is being built appropriately. \n",
     "\n",
-    "**For a full list of out-of-the-box tests,** refer to our [Test descriptions](https://docs.validmind.ai/developer/model-testing/test-descriptions.html) or try the interactive [Test sandbox](https://docs.validmind.ai/developer/model-testing/test-sandbox.html)."
+    "**For a full list of out-of-the-box tests,** refer to our [Test descriptions](https://docs.validmind.ai/developer/model-testing/test-descriptions.html) or try the interactive [Test sandbox](https://docs.validmind.ai/developer/model-testing/test-sandbox.html).\n",
+    "\n",
+    "<div class=\"alert alert-block alert-info\" style=\"background-color: #B5B5B510; color: black; border: 1px solid #083E44; border-left-width: 5px; box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);border-radius: 5px;\"><span style=\"color: #083E44;\"><b>Learn by doing</b></span>\n",
+    "<br></br>\n",
+    "Our course tailor-made for developers new to ValidMind combines this series of notebooks with more a more in-depth introduction to the ValidMind Platform — <a href=\"https://docs.validmind.ai/training/developer-fundamentals/developer-fundamentals-register.html\" style=\"color: #DE257E;\"><b>Developer Fundamentals</b></a></div>"
    ]
   },
   {
@@ -74,6 +78,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc2_'></a>\n",
+    "\n",
     "## Setting up"
    ]
   },
@@ -686,8 +692,9 @@
     "    <img src= \"add-content-block.gif\" alt=\"Screenshot showing insert block button in model documentation\" style=\"border: 2px solid #083E44; border-radius: 8px; border-right-width: 2px; border-bottom-width: 3px;\">\n",
     "    <br><br>\n",
     "\n",
-    "5. Click **+** and then select **Test-Driven Block**:\n",
+    "5. Click **+** and then select **Test-Driven Block** under FROM LIBRARY:\n",
     "\n",
+    "    - Click on **VM Library** under TEST-DRIVEN in the left sidebar.\n",
     "    - In the search bar, type in `HighPearsonCorrelation`.\n",
     "    - Select `HighPearsonCorrelation:balanced_raw_dataset` as the test.\n",
     "\n",
